--- a/src/index.html
+++ b/src/index.html
@@ -76,29 +76,7 @@
           <a class="btn-primary" href="">Learn more</a>
         </div>
         <div class="right">
-          <div class="strategy-cards-container">
-            <div class="strategy-card">
-              <div class="order">01</div>
-              <div class="info">
-                <h3>Collect Ideas</h3>
-                <p>Nulla vitae elit libero pharetra augue dapibus.</p>
-              </div>
-            </div>
-            <div class="strategy-card">
-              <div class="order">01</div>
-              <div class="info">
-                <h3>Collect Ideas</h3>
-                <p>Nulla vitae elit libero pharetra augue dapibus.</p>
-              </div>
-            </div>
-            <div class="strategy-card">
-              <div class="order">01</div>
-              <div class="info">
-                <h3>Collect Ideas</h3>
-                <p>Nulla vitae elit libero pharetra augue dapibus.</p>
-              </div>
-            </div>
-          </div>
+          <div class="strategy-cards-container"></div>
         </div>
       </div>
     </section>
@@ -131,76 +109,11 @@
             <p>Awards Won</p>
           </div>
         </div>
-        <div class="team-list">
-          <div class="team-item">
-            <img src="assets/images/team/team4.jpg" alt="">
-            <h3>Coriss Ambady</h3>
-            <p>Financial Analyst</p>
-            <p>Fermentum massa justo sit amet risus morbi leo.</p>
-            <div class="social-networks">
-              <div class="social-item">
-                <a href="">
-                  <img src="" alt="">
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="team-item">
-            <img src="assets/images/team/team4.jpg" alt="">
-            <h3>Coriss Ambady</h3>
-            <p>Financial Analyst</p>
-            <p>Fermentum massa justo sit amet risus morbi leo.</p>
-            <div class="social-networks">
-              <div class="social-item">
-                <a href="">
-                  <img src="" alt="">
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="team-item">
-            <img src="assets/images/team/team4.jpg" alt="">
-            <h3>Coriss Ambady</h3>
-            <p>Financial Analyst</p>
-            <p>Fermentum massa justo sit amet risus morbi leo.</p>
-            <div class="social-networks">
-              <div class="social-item">
-                <a href="">
-                  <img src="" alt="">
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="team-item">
-            <img src="assets/images/team/team4.jpg" alt="">
-            <h3>Coriss Ambady</h3>
-            <p>Financial Analyst</p>
-            <p>Fermentum massa justo sit amet risus morbi leo.</p>
-            <div class="social-networks">
-              <div class="social-item">
-                <a href="">
-                  <img src="" alt="">
-                </a>
-              </div>
-            </div>
-          </div>
-
-        </div>
+        <div class="team-list"></div>
     </section>
     <section class="projects">
       <h2>Check out some of our awesome projects with creative ideas and great design.</h2>
-      <div class="container projects-container">
-        <div class="project">
-          <img src="./assets/images/Projects/project1.jpg" alt="">
-          <h3>Nombre del Proyecto</h3>
-          <p>Categoria</p>
-        </div>
-        <div class="project">
-          <img src="./assets/images/Projects/project2.jpg" alt="">
-          <h3>Nombre del Proyecto</h3>
-          <p>Categoria</p>
-        </div>
-      </div>
+      <div class="container projects-container"></div>
     </section>
     <section class="testimonials">
       <div class="container ">
@@ -219,38 +132,6 @@
         </div>
         <div class="right">
           <div class="faqs-list">
-            <div class="faqs-item">
-              <details>
-                <summary>How do I get my subscription receipt?</summary>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic enim saepe corrupti accusamus! Quidem
-                  deserunt, aliquid placeat neque consectetur expedita recusandae distinctio explicabo reiciendis
-                  impedit itaque repellendus. Architecto, similique repellendus.</p>
-              </details>
-            </div>
-            <div class="faqs-item">
-              <details>
-                <summary>Are there any discounts for people in need?</summary>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic enim saepe corrupti accusamus! Quidem
-                  deserunt, aliquid placeat neque consectetur expedita recusandae distinctio explicabo reiciendis
-                  impedit itaque repellendus. Architecto, similique repellendus.</p>
-              </details>
-            </div>
-            <div class="faqs-item">
-              <details>
-                <summary>Do you offer a free trial edit?</summary>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic enim saepe corrupti accusamus! Quidem
-                  deserunt, aliquid placeat neque consectetur expedita recusandae distinctio explicabo reiciendis
-                  impedit itaque repellendus. Architecto, similique repellendus.</p>
-              </details>
-            </div>
-            <div class="faqs-item">
-              <details>
-                <summary>How do I reset my Account password?</summary>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic enim saepe corrupti accusamus! Quidem
-                  deserunt, aliquid placeat neque consectetur expedita recusandae distinctio explicabo reiciendis
-                  impedit itaque repellendus. Architecto, similique repellendus.</p>
-              </details>
-            </div>
           </div>
         </div>
       </div>
